fixed scrollbar

--- a/react-app/src/components/CartModal/Cart.css
+++ b/react-app/src/components/CartModal/Cart.css
@@ -78,3 +78,19 @@
   margin-top: 10px;
   margin-bottom: 5px;
 }
+
+.cartUser::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #f5f5f5;
+}
+
+.cartUser::-webkit-scrollbar {
+  width: 5px;
+  background-color: #f5f5f5;
+}
+
+.cartUser::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
